Добавлены линейная и полиномиальная функции